(feat) Completed ionic search-box component.

--- a/src/components/search-box/search-box.html
+++ b/src/components/search-box/search-box.html
@@ -1,1 +1,7 @@
-<ion-input type="text" value="{{selectedItemDescription}}" (click)="onPopSearch()" ></ion-input>
+<!--<ion-input type="text" value="{{selectedItemDescription}}" (click)="onPopSearch()" ></ion-input>-->
+
+
+<!--<span (click)="onPopSearch()">-->
+  <ion-note item-end (click)="onPopSearch()">{{selectedItemDescription}}</ion-note>
+<!--</span>-->
+
