fix(search-box): search box was not clickable when there was no selected value.

--- a/src/components/search-box/search-box.html
+++ b/src/components/search-box/search-box.html
@@ -1,4 +1,9 @@
 <!--<ion-input type="text" value="{{selectedItemDescription}}" (click)="onPopSearch()" ></ion-input>-->
 
-<ion-note item-end (click)="onPopSearch()">{{selectedItemDescription}}</ion-note>
+<!--<ion-note item-end (click)="onPopSearch()">{{selectedItemDescription}}</ion-note>-->
+
+<button ion-item type="button" (click)="onPopSearch()">
+  <ion-label fixed>{{description}}</ion-label>
+  <ion-label item-end>{{selectedItemDescription}}</ion-label>
+</button>
 
