--- a/src/components/search-box/search-box.html
+++ b/src/components/search-box/search-box.html
@@ -4,6 +4,6 @@
 
 <button ion-item type="button" (click)="onPopSearch()">
   <ion-label fixed>{{description}}</ion-label>
-  <ion-label item-end>{{selectedItemDescription}}</ion-label>
+  <ion-label item-end><ion-spinner [style.display]="isLoading ? 'block' : 'none'" item-start></ion-spinner>{{selectedItemDescription}}</ion-label>
 </button>
 
