--- a/src/components/picture-viewer/picture-viewer.scss
+++ b/src/components/picture-viewer/picture-viewer.scss
@@ -4,6 +4,11 @@ picture-viewer {
     height: 100%;
     object-fit: contain;
   }
+
+  .footer-button-camera {
+    margin-left: 10px;
+    font-size: 1.5em;
+  }
 }
 
 .selected-picture {
