Fix(picture-viewer): no more broken image url when there is no picture.

--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,6 +1,7 @@
 <ion-content>
-  <img class="selected-picture" [src]="imageUrl" (click)="onClickPicture()">
+  <img class="selected-picture" [src]="imageUrl" (click)="onClickPicture()" *ngIf="hasImageUrl">
 </ion-content>
+
 <ion-footer>
   <ion-toolbar>
     <ion-buttons start>
