--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,6 +1,6 @@
-<ion-content>
+<div class="div-selected-picture">
   <img class="selected-picture" [src]="imageUrl" (click)="onClickPicture()" *ngIf="hasImageUrl">
-</ion-content>
+</div>
 
 <ion-footer>
   <ion-toolbar>
@@ -24,3 +24,5 @@
     </div>-->
   </ion-toolbar>
 </ion-footer>
+
+
