feat: add intervention plan course detail page.

--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.scss
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.scss
@@ -2,4 +2,9 @@ page-intervention-implantation-plan {
   ion-header {
     z-index: 9999;
   }
+
+  .select-firestation {
+    max-width: 100%;
+    width: 100%
+  }
 }
