Feat (invervention plan course): validation errors are now displayed.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,3 +15,13 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 @import "../../node_modules/openlayers/css/ol";
+
+.validation-error-control {
+  border-left: red 4px solid;
+  border-bottom: red dotted thin;
+}
+
+.validation-error-text {
+  font-size: smaller;
+  color: red;
+}
