--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,7 +14,7 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
-@import "../../node_modules/openlayers/css/ol";
+//@import "../../node_modules/openlayers/css/ol";
 
 .validation-error-control {
   border-left: red 4px solid;
