--- a/src/pages/intervention-water-supplies/intervention-water-supplies.scss
+++ b/src/pages/intervention-water-supplies/intervention-water-supplies.scss
@@ -1,3 +1,10 @@
 page-intervention-water-supplies {
 
+  .action-list-button{
+    background-color: transparent;
+    float:right;
+    font-size: 2.5rem;
+    line-height: 3.8rem;
+  }
+
 }
