feat(#13): Manage add and delete building fire hydrant

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,3 +25,10 @@
   font-size: smaller;
   color: red;
 }
+
+.action-list-button{
+  background-color: transparent;
+  float:right;
+  font-size: 2.5rem;
+  line-height: 3.8rem;
+}
