--- a/src/pages/building-details/building-details.scss
+++ b/src/pages/building-details/building-details.scss
@@ -1,5 +1,18 @@
 page-building-details {
-  .myCustomSelect{
+  ion-select {
     max-width: 100%;
+    //min-width: 70%;
+  }
+
+  .col {
+    padding: 0px;
+  }
+
+  .grid {
+    padding: 0px;
+  }
+
+  .invalid {
+    border-bottom: 1px solid #ea6153;
   }
 }
