--- a/src/pages/inspection-question/inspection-question.scss
+++ b/src/pages/inspection-question/inspection-question.scss
@@ -1,3 +1,30 @@
 page-inspection-question {
 
+  .question-title h2
+  {
+    text-align: left;
+    font-size: 22px;
+    font-weight: bold;
+
+  }
+  .question-title p
+  {
+    text-align: left;
+    font-size: 18px;
+    width: 100%;
+  }
+  .question-answer-text{
+    width:95%;
+    height:30%;
+    type:text;
+    font-size:15px;
+    border: 1px solid black;
+  }
+  .swiper-slide
+  {
+    text-align: left;
+    webkit-align-items: initial;
+    align-items: initial;
+  }
+
 }
