--- a/src/pages/inspection-question-summary/inspection-question-summary.scss
+++ b/src/pages/inspection-question-summary/inspection-question-summary.scss
@@ -1,18 +1,16 @@
 page-inspection-question-summary {
-  .item
-  {
-   // background-color: #cccccc;
-    h2{
-      text-align: left;
-      font-size: 20px;
-      font-weight: bold;
-    }
+
+  .report-line {
+    padding: 5px;
+    border-bottom: solid lightgray 1px;
   }
-  p
-  {
-    text-align: left;
-    margin-left: 20px;
-    font-size: 18px;
-    width: 100%;
+
+  .report-line-text {
   }
+
+  .report-line-control {
+    float: right;
+    vertical-align: middle;
+  }
+
 }
