--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,7 +37,11 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  twitter:    #55acee
+  twitter:    #55acee,
+  caucaRed: (
+    base: #B32017,
+    contrast: #FFFFFF
+  )
 );
 
 
