--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,3 +36,52 @@
 .invalid {
   border-bottom: 1px solid #ea6153;
 }
+
+.text-white {
+  color: #fff;
+}
+
+.text-1x {
+  font-size: 1em;
+}
+
+.text-menu {
+  font-size: 1em;
+  color: color($colors, caucaRed);
+}
+
+.user-profile {
+  .user-avatar {
+    background-color: white;
+    width: 55px;
+    height: 55px;
+    display: inline-block;
+    border-radius: 20%;
+    //box-shadow: inset 0 0 10rem rgba(0,0,0,.25), 0 0 4rem rgba(255,255,255,.45);
+    img {
+      border-radius: 20%;
+    }
+  }
+  .toolbar-background {
+    background-image: linear-gradient(135deg, color($colors, dark), color($colors, caucaRed));
+  }
+
+  .other-data {
+    .column {
+      &:first-child {
+        border-right: 1px solid rgba(36, 50, 157, .25);
+      }
+    }
+  }
+}
+
+.menu-items {
+  .item {
+    &:last-child {
+      border-bottom: 0;
+    }
+    .item-inner {
+      border-color: rgba(86, 61, 124, .1);
+    }
+  }
+}
