Feat(#39) Menus tweaks.

--- a/src/components/menu-profile/menu-profile.html
+++ b/src/components/menu-profile/menu-profile.html
@@ -9,7 +9,7 @@
       </ion-col>
 
       <ion-col col-6>
-        <span ion-text class="text-white"><strong>SURVI</strong> prévention</span>
+        <span ion-text class="text-white"><strong>SURVI</strong>-Prévention</span>
         <h3 ion-text class="no-margin bold text-white">{{fullName}}</h3>
       </ion-col>
 
