--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,10 @@ $colors: (
   caucaRed: (
     base: #B32017,
     contrast: #FFFFFF
+  ),
+  caucaGold: (
+    base: #cbb677,
+    contrast: #000
   )
 );
 
