--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -2,26 +2,21 @@
   <img class="selected-picture" [src]="imageUrl" (click)="onClickPicture()" *ngIf="hasImageUrl">
 </div>
 
-<ion-footer>
+<ion-footer class="page-footer">
   <ion-toolbar>
-    <ion-buttons start>
-      <button ion-button  (click)="selectPicture()">
-        Choisir...
+    <ion-buttons>
+      <button ion-button icon-start (click)="selectPicture()">
         <ion-icon class="footer-button-camera" name="image"></ion-icon>
+        Choisir...
       </button>
     </ion-buttons>
     <ion-buttons end>
-      <button ion-button (click)="takeNewPicture()" *ngIf="isUsingCordova">
-        Nouvelle...
+      <button ion-button icon-start (click)="takeNewPicture()" *ngIf="isUsingCordova">
         <ion-icon class="footer-button-camera" name="camera"></ion-icon>
+        Nouvelle...
       </button>
     </ion-buttons>
     <input type="file" id="fileElem" #filePicker accept="image/*" style="display:none" (change)="onFileSelected($event);" />
-
-    <!--<div style="display: block; width: 100px; height: 20px; overflow: hidden;">
-      <button style="width: 110px; height: 30px; position: relative; top: -5px; left: -5px;"><a href="javascript: void(0)">Upload File</a></button>
-      <input type="file" id="upload_input" name="upload" style="display:none" />
-    </div>-->
   </ion-toolbar>
 </ion-footer>
 
