Fix(#39) missing font color & place holder.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -126,6 +126,7 @@
   }
   .item-divider {
     background-color: #cbb677;
+    color: black;
 /*    background-color: #737373;
     color: whitesmoke;*/
   }
