Fix(#39) Theme was not applied property everywhere.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -152,5 +152,6 @@
   .segment-button.segment-activated{
     background-color: color($colors, caucaGold);
     color: black;
+    border-color: color($colors, caucaGold);
   }
 }
