--- a/src/components/menu-profile/menu-profile.html
+++ b/src/components/menu-profile/menu-profile.html
@@ -1,6 +1,6 @@
 <ion-toolbar class="user-profile">
-  <ion-grid>
-    <ion-row>
+    <ion-grid>
+        <ion-row>
 
       <ion-col col-3>
         <div class="user-avatar">
@@ -8,27 +8,32 @@
         </div>
       </ion-col>
 
-      <ion-col col-6>
-        <span ion-text class="text-white"><strong>SURVI</strong>-Prévention</span>
-        <h3 ion-text class="no-margin bold text-white">{{fullName}}</h3>
-      </ion-col>
+            <ion-col>
+                <span ion-text class="text-white"><strong>SURVI</strong>-Prévention</span>
+                <h3 ion-text class="no-margin bold text-white">{{fullName}}</h3>
+            </ion-col>
 
-    </ion-row>
+            <ion-col col-3>
+                <button ion-button full margin-right="2" color="light" (click)="sessionLogout()">
+                    <div>
+                        <ion-icon name="log-out"></ion-icon>
+                        <br>
+                        <label>Quitter</label>
+                    </div>
+                </button>
 
-    <ion-row no-padding class="other-data">
-      <ion-col no-padding class="column">
-        <button ion-button icon-left small full color="light" menuClose disabled>
-          <ion-icon name="contact"></ion-icon>
-          Configuration
-        </button>
-      </ion-col>
-      <ion-col no-padding class="column">
-        <button ion-button icon-left small full color="light" menuClose (click)="logout()">
-          <ion-icon name="log-out"></ion-icon>
-          Fermer la session
-        </button>
-      </ion-col>
-    </ion-row>
+            </ion-col>
 
-  </ion-grid>
+        </ion-row>
+
+        <ion-row no-padding class="other-data">
+            <ion-col no-padding class="column">
+                <button ion-button icon-left small full color="light" menuClose disabled>
+                    <ion-icon name="contact"></ion-icon>
+                    Configuration
+                </button>
+            </ion-col>
+        </ion-row>
+
+    </ion-grid>
 </ion-toolbar>
