--- a/src/pages/intervention-general/intervention-general.scss
+++ b/src/pages/intervention-general/intervention-general.scss
@@ -1,3 +1,29 @@
 page-intervention-general {
+ion-card-header{
+  font-size: 2rem !important;
+  font-weight: bold;
+}
+  .large-button
+  {
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    width:95%;
+  }
+  .inline-button {
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    width:95%;
 
+  }
+  .inline-button button {
+    width:calc(50% - 0.4rem);
+  }
+  .inline-button button:first-child
+  {
+    margin-left: 0;
+  }
+  .inline-button button:last-child
+  {
+    margin-right: 0;
+  }
 }
