Fix(#62) Change ionic cordova picture viewer by ionic-picture-viewer (external component).

--- a/src/components/building-child-pictures/building-child-pictures.html
+++ b/src/components/building-child-pictures/building-child-pictures.html
@@ -19,7 +19,7 @@
           <button ion-button icon-only small outline class="deleteIcon" (click)="onDeletePhotos(id)" color="caucaRed">
             <ion-icon name="trash" class="deleteIcon" (click)="onDeletePhotos(id)"></ion-icon>
           </button>
-          <img class="selected-picture" [src]="getImageUrl(picture.pictureData)" (click)="onClickPicture(picture.pictureData)" *ngIf="hasImageUrl(picture.pictureData)">
+          <img class="selected-picture" [src]="getImageUrl(picture.pictureData)" *ngIf="hasImageUrl(picture.pictureData)" imageViewer />
         </ion-card>
       </ion-slide>
     </ion-slides>
