--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,5 +1,5 @@
 <div class="div-selected-picture">
-  <img class="selected-picture" [src]="imageUrl" (click)="onClickPicture()" *ngIf="hasImageUrl">
+  <img class="selected-picture" [src]="imageUrl" *ngIf="hasImageUrl" imageViewer />
 </div>
 
 <ion-footer class="page-footer">
