Fix(#60) Use absolute path instead of relative one.

--- a/src/components/menu-profile/menu-profile.html
+++ b/src/components/menu-profile/menu-profile.html
@@ -4,7 +4,7 @@
 
       <ion-col col-3>
         <div class="user-avatar">
-          <img src="../assets/img/logocauca-vertical.png">
+          <img src="assets/img/logocauca-vertical.png">
         </div>
       </ion-col>
 
