--- a/src/pages/inspection-question-summary/inspection-question-summary.scss
+++ b/src/pages/inspection-question-summary/inspection-question-summary.scss
@@ -21,6 +21,15 @@ page-inspection-question-summary {
   }
 
   .recursive-item{
+    margin-left: 16px !important;
+  }
+
+  .recursive-item-title {
+    margin-left: 16px !important;
+    background-color: #cbb677;
+  }
+
+  .non-recursive-item{
     padding-left: 16px !important;
   }
 }
