--- a/src/components/search-list/search-list.html
+++ b/src/components/search-list/search-list.html
@@ -7,7 +7,7 @@
       Recherche
     </ion-title>
   </ion-navbar>
-  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
+  <ion-searchbar placeholder="Recherche..." [(ngModel)]="searchTerm" [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
 </ion-header>
 
 <ion-content>
