--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,6 +1,6 @@
 <div class="div-selected-picture">
   <!-- <img class="selected-picture" [src]="imageUrl" *ngIf="hasImageUrl" imageViewer /> -->
-  <lib-mobile-sketch-tool [imgUrl]="imageUrl" *ngIf="hasImageUrl"></lib-mobile-sketch-tool>
+  <lib-mobile-sketch-tool [imgUrl]="imageUrl" [iconsPath]="iconsPath" [icons]="icons" *ngIf="hasImageUrl"></lib-mobile-sketch-tool>
 </div>
 
 <ion-footer class="page-footer">
