(feat#75): Removed pictograms to move them to DB

--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,6 +1,7 @@
 <div class="div-selected-picture">
   <!-- <img class="selected-picture" [src]="imageUrl" *ngIf="hasImageUrl" imageViewer /> -->
-  <lib-mobile-sketch-tool class="selected-picture" [imgUrl]="imageUrl" [canvasJson]="loadedJson" [iconsPath]="iconsPath" [icons]="icons" (json)="onJsonChanged($event)" *ngIf="hasImageUrl"></lib-mobile-sketch-tool>
+  
+  <lib-mobile-sketch-tool class="selected-picture" [imageData]="imageUrl" [loadedJson]="loadedJson" (json)="onJsonChanged($event)" *ngIf="hasImageUrl"></lib-mobile-sketch-tool>
 </div>
 
 <ion-footer class="page-footer">
