--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="div-selected-picture">
   <!-- <img class="selected-picture" [src]="imageUrl" *ngIf="hasImageUrl" imageViewer /> -->
   
