--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="div-selected-picture">
-  <lib-mobile-sketch-tool class="selected-picture" [imageData]="imageUrl" [loadedJson]="loadedJson" (json)="onJsonChanged($event)" *ngIf="hasImageUrl"></lib-mobile-sketch-tool>
+  <lib-mobile-sketch-tool class="selected-picture" [imageData]="imageUrl" [loadedJson]="value.sketchJson" (json)="onJsonChanged($event)" *ngIf="hasImageUrl"></lib-mobile-sketch-tool>
 </div>
 
 <ion-footer class="page-footer">
