feat(#97): Changed UI to access edition

--- a/src/components/building-child-pictures/building-child-pictures.html
+++ b/src/components/building-child-pictures/building-child-pictures.html
@@ -20,6 +20,10 @@
                             color="caucaRed">
                         <ion-icon name="trash" class="deleteIcon"></ion-icon>
                     </button>
+                    <button ion-button icon-only small outline class="brushIcon"
+                            color="caucaRed">
+                        <ion-icon name="brush" class="brushIcon"></ion-icon>
+                    </button>
                     <img class="selected-picture" [src]="getImageUrl(picture.pictureData)"
                          *ngIf="hasImageUrl(picture.pictureData)" imageViewer/>
                          
