--- a/src/components/building-child-pictures/building-child-pictures.scss
+++ b/src/components/building-child-pictures/building-child-pictures.scss
@@ -4,6 +4,11 @@ building-child-pictures {
     right: 14px;
     background: white;
   }
+  button.brushIcon{
+    position: absolute;
+    right: 50px;
+    background: white;
+  }
   ion-card{
     height: 350px;
     width: auto;
