feat(#97): Added new page and component

--- a/src/components/building-child-pictures/building-child-pictures.html
+++ b/src/components/building-child-pictures/building-child-pictures.html
@@ -20,7 +20,7 @@
                             color="caucaRed">
                         <ion-icon name="trash" class="deleteIcon"></ion-icon>
                     </button>
-                    <button ion-button icon-only small outline class="brushIcon"
+                    <button ion-button icon-only small outline class="brushIcon" (click)="onEditPhoto()"
                             color="caucaRed">
                         <ion-icon name="brush" class="brushIcon"></ion-icon>
                     </button>
