feat(#101) Add translation in course, course-detail page

--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -7,13 +7,13 @@
     <ion-buttons>
       <button ion-button icon-start (click)="selectPicture()">
         <ion-icon class="footer-button-camera" name="image"></ion-icon>
-        Choisir...
+        {{'choose' | translate}}...
       </button>
     </ion-buttons>
     <ion-buttons end>
       <button ion-button icon-start (click)="takeNewPicture()" *ngIf="isUsingCordova">
         <ion-icon class="footer-button-camera" name="camera"></ion-icon>
-        Nouvelle...
+        {{'New' | translate}}...
       </button>
     </ion-buttons>
     <input type="file" id="fileElem" #filePicker accept="image/*" style="display:none" (change)="onFileSelected($event);" />
