feat(#101) Add translation for building detail

--- a/src/components/menu-profile/menu-profile.html
+++ b/src/components/menu-profile/menu-profile.html
@@ -15,7 +15,7 @@
                     <div>
                         <ion-icon name="log-out"></ion-icon>
                         <br>
-                        <label>{{'logout' | translate}}</label>
+                        <label class="log-out-button">{{'logout' | translate}}</label>
                     </div>
                 </button>
             </ion-col>
