--- a/src/pages/building-details/building-details.scss
+++ b/src/pages/building-details/building-details.scss
@@ -15,4 +15,9 @@ page-building-details {
   .invalid {
     border-bottom: 1px solid #ea6153;
   }
+
+  .unit-select{
+    width:100%;
+    text-align: right;
+  }
 }
