feat(#101) Add translation for hazardous material

--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.scss
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.scss
@@ -11,4 +11,8 @@ page-building-hazardous-material-detail {
   .grid {
     padding: 0px;
   }
+  .unit-select{
+    width:100%;
+    text-align: right;
+  }
 }
