--- a/src/components/picture-viewer/picture-viewer.scss
+++ b/src/components/picture-viewer/picture-viewer.scss
@@ -1,13 +1,19 @@
 picture-viewer {
   .div-selected-picture {
     width: 100%;
-    height: 80%;
+    height: 100%;
     padding: 5px;
   }
 
   .footer-button-camera {
     margin-left: 10px;
     font-size: 1.5em;
+  }
+
+  .selected-picture{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 }
 
