feat(#101) Hot fix for translation

--- a/src/components/search-list/search-list.html
+++ b/src/components/search-list/search-list.html
@@ -1,7 +1,7 @@
 <ion-header class="page-header">
   <ion-navbar>
     <button ion-button icon-left small (click)="onCancelSelection()" color="caucaGold">
-      <ion-icon name="arrow-back"></ion-icon>Annuler
+      <ion-icon name="arrow-back"></ion-icon>{{'cancel' | translate}}
     </button>
     <ion-title>{{'search' | translate}}</ion-title>
   </ion-navbar>
