feat(#101) Hot fix on android design

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -164,3 +164,11 @@ ion-navbar ion-icon{
 
 [col-3]
 {padding:0px;}
+
+.list-header-md{
+  margin-bottom:0px;
+  border-top:none;
+}
+.list-md{
+  margin: 0px 0 16px;
+}
