feat(#75): Scripts to copy font-awesome

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -90,5 +90,6 @@ $colors: (
 @import "roboto";
 @import "noto-sans";
 
-$fa-font-path: "../assets/fonts";
-@import '../../node_modules/font-awesome/scss/font-awesome.scss';
+// Font Awesome
+$fa-font-path: $font-path;
+@import "font-awesome";
