--- a/src/components/picture-viewer/picture-viewer.html
+++ b/src/components/picture-viewer/picture-viewer.html
@@ -1,6 +1,6 @@
 <ion-content scroll="false">
   <div class="div-selected-picture">
-      <button ion-button icon-only small outline class="brushIcon" (click)="onEditPhoto()" color="caucaRed">
+      <button ion-button icon-only small outline class="brushIcon" (click)="onEditPhoto()" color="caucaRed" *ngIf="hasImageUrl">
         <ion-icon name="brush" class="brushIcon"></ion-icon>
       </button>
     <img class="selected-picture" [src]="imageUrl" *ngIf="hasImageUrl" imageViewer />
